--- a/features.Rmd
+++ b/features.Rmd
@@ -96,8 +96,8 @@ consider these statistics when they help you to answer your research question.
 You should check, though, whether the implicit assumptions behind the statistics
 are correct. When you use the mean and the standard deviation to summarize a
 time-series, you assume that the data-generating process behind the series is
-stable over time (in technical terms: that this process is *stationary*,
-@wiki_Stationary_process). If this assumption is incorrect (i.e., if the
+stable over time - in technical terms: that this process is *stationary* 
+[@wikiStationary]. If this assumption is incorrect (i.e., if the
 process is unstable or non-stationary), the mean and SD are biased statistics.
 
 Our simulated EMA time-series is non-stationary, as can be seen in Figure
@@ -329,7 +329,7 @@ periodicity in the EMA time series. Suppose we want to know more about this
 periodicity. Is there a way to quantify it? Yes, there is. With a technique
 called Fourier Analysis, the the strength ('power') of various frequencies can
 be quantified. Figure \@ref(fig:fig8i) shows what happens if we run a Fourier
-analysis of our time series (with R's built-in function 'spec.pgram').
+analysis of our time series (with R's built-in function `spec.pgram`).
 
 ```{r fig8i, echo = FALSE, out.width = "100%", fig.asp = .4, fig.cap = "periodogram of the EMA time series, revealing a one-day and a one-week period."}
 fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_day), 
@@ -342,8 +342,8 @@ fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_da
 
 There are two peaks in the figure: at a frequency of 1 (day) and at a frequency
 of `r round(fa$freq[order(fa$spec, decreasing = TRUE)][1], 2)` (about one week).
-This series is "circadian": mood ratings seem to follow a daily and a weekly
-pattern. This is a common characteristic of EMA data, because of the circadian
+This series is *circadian*: mood ratings follow a daily and a weekly
+pattern. This is a common feature of EMA data, because of the circadian
 rhythms in our body and in our environment (our biological clocks, day-night
 cycles, seasons) [@Doherty2018; @Frank2000; @Karatsoreos2014; @VanSomeren2000;
 @Tahmasian2013].
